unpackaged/main/default/objects/IRE_StagingTable__c/IRE_StagingTable__c.object-meta.xml
<CustomObject>
    <label>IRE StagingTable</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IRE StagingTable</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>