unpackaged/main/default/objects/IRE_StagingTable__c/fields/IREDeactivationDate__c.field-meta.xml
<CustomField>
    <fullName>IREDeactivationDate__c</fullName>
    <label>IREDeactivationDate</label>
    <type>Date</type>
</CustomField>