unpackaged/main/default/objects/IRE_StagingTable__c/fields/IREReactivationDate__c.field-meta.xml
<CustomField>
    <fullName>IREReactivationDate__c</fullName>
    <label>IREReactivationDate</label>
    <type>Date</type>
</CustomField>