unpackaged/main/default/objects/IRE_StagingTable__c/fields/LoyaltyID__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyID__c</fullName>
    <label>Loyalty ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>