unpackaged/main/default/objects/IRE_StagingTable__c/fields/MasterCustomerId__c.field-meta.xml
<CustomField>
    <fullName>MasterCustomerId__c</fullName>
    <label>MasterCustomerId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>