unpackaged/main/default/objects/IRE_StagingTable__c/fields/SubscriberKey__c.field-meta.xml
<CustomField>
    <fullName>SubscriberKey__c</fullName>
    <label>SubscriberKey</label>
    <length>18</length>
    <type>Text</type>
</CustomField>