unpackaged/main/default/objects/IRE_StagingTable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SubscriberKey__c</columns>
    <columns>MasterCustomerId__c</columns>
    <columns>IREReactivationDate__c</columns>
    <columns>IREDeactivationDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>